talent-app/main/default/objects/Skill_Comment__c/fields/Create_When_Disp__c.field-meta.xml
<CustomField>
    <fullName>Create_When_Disp__c</fullName>
    <formula>IF(
ISBLANK(Create_When__c),
"",
TEXT(YEAR(DATEVALUE(Create_When__c))) + "/" + TEXT(MONTH(DATEVALUE(Create_When__c))) + "/" +TEXT(DAY(DATEVALUE(Create_When__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FML Create When</label>
    <type>Text</type>
</CustomField>