talent-app/main/default/objects/Skill_Comment__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee ID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Skill Comment</relationshipLabel>
    <relationshipName>Skill_Comment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>