talent-app/main/default/objects/Skill_Comment__c/fields/Skill_Level_ID__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Skill Level ID</label>
    <referenceTo>Skill_Level__c</referenceTo>
    <relationshipLabel>Skill Comment</relationshipLabel>
    <relationshipName>Skill_Comment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>