talent-app/main/default/objects/Skill_Comment__c/listViews/List.listView-meta.xml
<ListView>
    <fullName>List</fullName>
    <columns>Employee_ID__c</columns>
    <columns>Skill_ID__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>List</label>
</ListView>